# an_hori_project

./: LICENSE
devel/: .catkin  .rosinstall
devel/include/cacc_communicator/: carParamConfig.h
devel/include/cacc_controller/: MpcParamConfig.h
devel/include/cacc_msgs/: CaccControlPacket.h  CaccMpcParam.h  CaccMpcState.h  CaccSensorPacket.h  CaccStatePacket.h  PrarxParam.h
devel/include/custom_pkg/: control_signal.h  six_states.h
devel/lib/cacc_communicator/: car_receiver  car_sender  controller_receiver  controller_sender
devel/lib/cacc_controller/: following_controller  model_estimator  platooning_cgmres  state_estimator
devel/lib/car_simulator/: car_simulator
devel/lib/controller_calc/: controller_calc
devel/lib/manual_controller/: manual_publisher
devel/lib/pkgconfig/: cacc_communicator.pc  cacc_controller.pc  cacc_msgs.pc  car_simulator.pc  cgmres_lib.pc  controller_calc.pc  custom_pkg.pc  manual_controller.pc  rosbag_player.pc  udp_connector_lib.pc  vrpn_client_ros.pc
devel/lib/python2.7/dist-packages/cacc_communicator/cfg/: carParamConfig.py
devel/lib/python2.7/dist-packages/cacc_controller/cfg/: MpcParamConfig.py
devel/lib/python2.7/dist-packages/cacc_msgs/msg/: _CaccControlPacket.py  _CaccMpcParam.py  _CaccMpcState.py  _CaccSensorPacket.py  _CaccStatePacket.py  _PrarxParam.py  __init__.py
devel/lib/python2.7/dist-packages/custom_pkg/msg/: __init__.py  _control_signal.py  _six_states.py
devel/lib/rosbag_player/: rosbag_player
devel/lib/vrpn_client_ros/: vrpn_client_node  vrpn_tracker_node
devel/share/cacc_communicator/cmake/: cacc_communicatorConfig.cmake
devel/share/cacc_communicator/docs/: carParamConfig-usage.dox  carParamConfig.dox  carParamConfig.wikidoc
devel/share/cacc_controller/cmake/: cacc_controllerConfig.cmake
devel/share/cacc_controller/docs/: MpcParamConfig-usage.dox  MpcParamConfig.dox  MpcParamConfig.wikidoc
devel/share/cacc_msgs/cmake/: cacc_msgs-msg-extras.cmake  cacc_msgs-msg-paths.cmake  cacc_msgsConfig.cmake
devel/share/car_simulator/cmake/: car_simulatorConfig.cmake
devel/share/cgmres_lib/cmake/: cgmres_libConfig.cmake
devel/share/common-lisp/ros/cacc_msgs/msg/: CaccControlPacket.lisp  CaccMpcParam.lisp  CaccMpcState.lisp  CaccSensorPacket.lisp  CaccStatePacket.lisp  PrarxParam.lisp  _package.lisp  _package_CaccControlPacket.lisp  _package_CaccMpcParam.lisp  _package_CaccMpcState.lisp  _package_CaccSensorPacket.lisp  _package_CaccStatePacket.lisp  _package_PrarxParam.lisp  cacc_msgs-msg.asd
devel/share/common-lisp/ros/custom_pkg/msg/: _package.lisp  _package_control_signal.lisp  (+4 more)
devel/share/controller_calc/cmake/: controller_calcConfig.cmake
devel/share/custom_pkg/cmake/: custom_pkg-msg-extras.cmake  custom_pkg-msg-paths.cmake  custom_pkgConfig.cmake
devel/share/manual_controller/cmake/: manual_controllerConfig.cmake
devel/share/rosbag_player/cmake/: rosbag_playerConfig.cmake
devel/share/roseus/ros/cacc_msgs/: manifest.l
devel/share/roseus/ros/custom_pkg/: manifest.l
devel/share/udp_connector_lib/cmake/: udp_connector_libConfig.cmake
devel/share/vrpn_client_ros/cmake/: vrpn_client_rosConfig.cmake
rviz/: rviz.rviz
src/cacc/test_simulation/2cars/: cacc_communicator_only_2019.launch  cacc_controller_only_2019.launch  car_communicator_all.launch  car_simulator_indiv.launch  car_simulator_with_controller.launch  car_simulator_with_controller_all.launch  following_integrated_launch.launch  model_estimator.launch
src/cacc/test_simulation/3cars/: cacc_communicator_only_2019.launch  cacc_controller_only_2019.launch  cacc_controller_only_wo_estimator2019.launch  car_communicator_000.launch  car_communicator_001.launch  car_communicator_002.launch  car_communicator_all.launch  car_simulator_002.launch  car_simulator_with_controller_all.launch  controller_calc_000.launch  controller_calc_001.launch  controller_calc_002.launch  rosbag_player000.launch  rosbag_player001.launch  rosbag_player002.launch
src/cacc/test_simulation/4cars/: cacc_communicator_only_2019.launch  cacc_controller_only_2019.launch  cacc_estimator_only.launch  car_communicator_002.launch  car_communicator_003.launch  car_communicator_all.launch  car_simulator_with_controller_all.launch  controller_calc_indiv.launch  model_estimator.launch
src/car_simulator/: CMakeLists.txt
src/car_simulator/include/: Car.h
src/car_simulator/launch/: car_simulator_indiv.launch  car_simulator_with_controller.launch  car_simulator_with_controller2.launch  car_simulator_with_controller_all.launch
src/car_simulator/src/: car_simulator.cpp
src/controller_calc/: CMakeLists.txt  README.md  package.xml
src/controller_calc/Path_Info/: Rectangular_simple_resampled_path.csv  Test_detailed_path2.csv
src/controller_calc/include/: Car.h  Car_control.h
src/controller_calc/launch/: all.launch  controller_calc.launch  controller_calc_all.launch  controller_calc_indiv.launch
src/controller_calc/src/: Car.cpp  controller_calc.cpp
src/custom_pkg/: CMakeLists.txt  package.xml
src/custom_pkg/msg/: control_signal.msg
src/ekf_estimation/: CMakeLists.txt  README.md  package.xml
src/ekf_estimation/include/: car_model_6D.h  ekf.h
src/ekf_estimation/launch/: ekf_estimation.launch
src/ekf_estimation/src/: state_estimation_EKF_6D.cpp
src/manual_controller/: CMakeLists.txt  package.xml
src/manual_controller/Path_Info/: Rectangular_simple.csv  Rectangular_simple_detailed_path.csv  Test.csv  Test2.csv  TestPtnShortR.csv  Test_detailed_path.csv  Test_resampled_path.csv  Test_resampled_path2.csv
src/manual_controller/launch/: controller_calc_manual.launch  manual_controller.launch
src/manual_controller/src/: Car_control.cpp  controller.cpp  controller_calc_manual.cpp
src/rosbag_player/: CMakeLists.txt  package.xml
src/rosbag_player/launch/: rosbag_player.launch
src/rosbag_player/src/: rosbag_player.cpp
src/vrpn_client_ros/: README.md
src/vrpn_client_ros/launch/: vrpn_client_ros.launch  vrpn_client_ros_save_bag.launch  vrpn_client_ros_with_control.launch
src/vrpn_client_ros/src/: vrpn_client_node.cpp  vrpn_tracker_node.cpp
(+18 files in other folders)
